# cpp_basic_build_system

./: .gitignore  CMakeLists.txt  LICENSE  Printer.cpp  README.md  main.cpp
cmake/: DownloadGTest.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake
include/: Printer.h  simple_header.h
include/calculator/: Calculator.h
scripts/: run_cmake_config.sh
src/: CMakeLists.txt
src/calculator/: CMakeLists.txt  Calculator.cpp
src/calculator/test/: CMakeLists.txt  test.cpp
src/test/: CMakeLists.txt
