#######################
# Your test code here #
#######################
#add_executable(MyTest MyTest.cpp)
#target_include_directories(MyTest PUBLIC
#    ${CMAKE_SOURCE_DIR}/include/
#)
#target_link_libraries(MyTest
#	MyLib
#	gtest
#)

## Create tests from executable files
#add_test(NAME my_test COMMAND MyTest)

# vim:set noet sts=0 sw=4 ts=4 tw=80 :
